website/src/App.css
.App {
  text-align: center;
  background: var(--background-color);
  color: var(--text-color);
  font-weight: var(--font-weight);
  transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
}
/*changed color of --gray to lighter version so that links on scholarship
page could be easily distinguishable*/
:root {
  --gray: rgba(29, 28, 28, 0.89);
  --white: white;
  --black: black;
}

body.light {
  --background-color: var(--white);
  --text-color: var(--gray);
  --font-weight: 400;
}
body.dark {
  --background-color: var(--gray);
  --text-color: var(--white);
  --font-weight: 500;
}
body {
  background: var(--background-color);
  color: var(--text-color);
  font-weight: var(--font-weight);
  transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
}
nav {
  background: var(--text-color);
}
nav a {
  color: var(--background-color);
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);

  background: var(--background-color);
  color: var(--text-color);
  font-weight: var(--font-weight);
  transition: backgrounf 0.3s ease-in-out, color 0.6s ease-in-out;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
/* .scroll-top {
  width: 75px;
  height: 75px;
  position: fixed;
  bottom: 25px;
  left: 20px;
  display: none;
}
.scroll-top i {
  display: inline-block;
  color: #fff;
} */

